examples/kju/positive/functions/function_shadowing.kju
fun write(a: Int): Unit import

fun f():Int{
	return 5;
}

fun kju():Unit{
	fun f():Int{
		return 3;
	};
	var x:Int=f();
	write(x);
}
