examples/kju/negative/typeChecker/inner_function_shadowing.kju
fun f():Int{
	return 5;
}

fun kju():Unit{
	fun f(a: Int):Int{
		return 3;
	};
	f();
}